--- a/_css/custom.css
+++ b/_css/custom.css
@@ -200,298 +200,241 @@ footer hr {
   display: inline-block;
 }
 
-/* Syntax */
-
-/* to make lines scroll instead of wrap */
-/* from http://stackoverflow.com/a/23393920 */
-
-.highlight pre code * {
-  white-space: nowrap;
+/* Reset highlight plain text color */
+.highlight {
+  color: #d0d0d0;
+  padding: 8px 12px;
 }
 
+/* Native pygment style - https://github.com/jwarby/jekyll-pygments-themes */
 .highlight pre {
-  overflow-x: auto;
+  background-color: #404040;
 }
-
-.highlight pre code {
-  white-space: pre;
-}
-
-/*
- * GitHub style for Pygments syntax highlighter, for use with Jekyll
- * Courtesy of GitHub.com
- */
-
-.highlight pre,
-pre,
 .highlight .hll {
-  background-color: #f8f8f8;
-  border: 1px solid #ccc;
-  padding: 6px 10px;
-  border-radius: 3px;
+  background-color: #404040;
 }
-
 .highlight .c {
-  color: #999988;
+  color: #999999;
   font-style: italic;
-}
-
+} /* Comment */
 .highlight .err {
   color: #a61717;
   background-color: #e3d2d2;
-}
-
+} /* Error */
+.highlight .g {
+  color: #d0d0d0;
+} /* Generic */
 .highlight .k {
+  color: #6ab825;
   font-weight: bold;
-}
-
-.highlight .o {
-  font-weight: bold;
-}
-
-.highlight .cm {
-  color: #999988;
-  font-style: italic;
-}
-
-.highlight .cp {
-  color: #999999;
-  font-weight: bold;
-}
-
-.highlight .c1 {
-  color: #999988;
-  font-style: italic;
-}
-
-.highlight .cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic;
-}
-
-.highlight .gd {
-  color: #000000;
-  background-color: #ffdddd;
-}
-
-.highlight .gd .x {
-  color: #000000;
-  background-color: #ffaaaa;
-}
-
-.highlight .ge {
-  font-style: italic;
-}
-
-.highlight .gr {
-  color: #aa0000;
-}
-
-.highlight .gh {
-  color: #999999;
-}
-
-.highlight .gi {
-  color: #000000;
-  background-color: #ddffdd;
-}
-
-.highlight .gi .x {
-  color: #000000;
-  background-color: #aaffaa;
-}
-
-.highlight .go {
-  color: #888888;
-}
-
-.highlight .gp {
-  color: #555555;
-}
-
-.highlight .gs {
-  font-weight: bold;
-}
-
-.highlight .gu {
-  color: #800080;
-  font-weight: bold;
-}
-
-.highlight .gt {
-  color: #aa0000;
-}
-
-.highlight .kc {
-  font-weight: bold;
-}
-
-.highlight .kd {
-  font-weight: bold;
-}
-
-.highlight .kn {
-  font-weight: bold;
-}
-
-.highlight .kp {
-  font-weight: bold;
-}
-
-.highlight .kr {
-  font-weight: bold;
-}
-
-.highlight .kt {
-  color: #445588;
-  font-weight: bold;
-}
-
-.highlight .m {
-  color: #009999;
-}
-
-.highlight .s {
-  color: #dd1144;
-}
-
+} /* Keyword */
+.highlight .l {
+  color: #d0d0d0;
+} /* Literal */
 .highlight .n {
-  color: #333333;
-}
-
-.highlight .na {
-  color: teal;
-}
-
-.highlight .nb {
-  color: #0086b3;
-}
-
-.highlight .nc {
-  color: #445588;
-  font-weight: bold;
-}
-
-.highlight .no {
-  color: teal;
-}
-
-.highlight .ni {
-  color: purple;
-}
-
-.highlight .ne {
-  color: #990000;
-  font-weight: bold;
-}
-
-.highlight .nf {
-  color: #990000;
-  font-weight: bold;
-}
-
-.highlight .nn {
-  color: #555555;
-}
-
-.highlight .nt {
-  color: navy;
-}
-
-.highlight .nv {
-  color: teal;
-}
-
-.highlight .ow {
-  font-weight: bold;
-}
-
-.highlight .w {
-  color: #bbbbbb;
-}
-
-.highlight .mf {
-  color: #009999;
-}
-
-.highlight .mh {
-  color: #009999;
-}
-
-.highlight .mi {
-  color: #009999;
-}
-
-.highlight .mo {
-  color: #009999;
-}
-
-.highlight .sb {
-  color: #dd1144;
-}
-
-.highlight .sc {
-  color: #dd1144;
-}
-
-.highlight .sd {
-  color: #dd1144;
-}
-
-.highlight .s2 {
-  color: #dd1144;
-}
-
-.highlight .se {
-  color: #dd1144;
-}
-
-.highlight .sh {
-  color: #dd1144;
-}
-
-.highlight .si {
-  color: #dd1144;
-}
-
-.highlight .sx {
-  color: #dd1144;
-}
-
-.highlight .sr {
-  color: #009926;
-}
-
-.highlight .s1 {
-  color: #dd1144;
-}
-
-.highlight .ss {
-  color: #990073;
-}
-
-.highlight .bp {
+  color: #d0d0d0;
+} /* Name */
+.highlight .o {
+  color: #d0d0d0;
+} /* Operator */
+.highlight .x {
+  color: #d0d0d0;
+} /* Other */
+.highlight .p {
+  color: #d0d0d0;
+} /* Punctuation */
+.highlight .cm {
   color: #999999;
-}
-
+  font-style: italic;
+} /* Comment.Multiline */
+.highlight .cp {
+  color: #cd2828;
+  font-weight: bold;
+} /* Comment.Preproc */
+.highlight .c1 {
+  color: #999999;
+  font-style: italic;
+} /* Comment.Single */
+.highlight .cs {
+  color: #e50808;
+  font-weight: bold;
+  background-color: #520000;
+} /* Comment.Special */
+.highlight .gd {
+  color: #d22323;
+} /* Generic.Deleted */
+.highlight .ge {
+  color: #d0d0d0;
+  font-style: italic;
+} /* Generic.Emph */
+.highlight .gr {
+  color: #d22323;
+} /* Generic.Error */
+.highlight .gh {
+  color: #ffffff;
+  font-weight: bold;
+} /* Generic.Heading */
+.highlight .gi {
+  color: #589819;
+} /* Generic.Inserted */
+.highlight .go {
+  color: #cccccc;
+} /* Generic.Output */
+.highlight .gp {
+  color: #aaaaaa;
+} /* Generic.Prompt */
+.highlight .gs {
+  color: #d0d0d0;
+  font-weight: bold;
+} /* Generic.Strong */
+.highlight .gu {
+  color: #ffffff;
+  text-decoration: underline;
+} /* Generic.Subheading */
+.highlight .gt {
+  color: #d22323;
+} /* Generic.Traceback */
+.highlight .kc {
+  color: #6ab825;
+  font-weight: bold;
+} /* Keyword.Constant */
+.highlight .kd {
+  color: #6ab825;
+  font-weight: bold;
+} /* Keyword.Declaration */
+.highlight .kn {
+  color: #6ab825;
+  font-weight: bold;
+} /* Keyword.Namespace */
+.highlight .kp {
+  color: #6ab825;
+} /* Keyword.Pseudo */
+.highlight .kr {
+  color: #6ab825;
+  font-weight: bold;
+} /* Keyword.Reserved */
+.highlight .kt {
+  color: #6ab825;
+  font-weight: bold;
+} /* Keyword.Type */
+.highlight .ld {
+  color: #d0d0d0;
+} /* Literal.Date */
+.highlight .m {
+  color: #3677a9;
+} /* Literal.Number */
+.highlight .s {
+  color: #ed9d13;
+} /* Literal.String */
+.highlight .na {
+  color: #bbbbbb;
+} /* Name.Attribute */
+.highlight .nb {
+  color: #24909d;
+} /* Name.Builtin */
+.highlight .nc {
+  color: #447fcf;
+  text-decoration: underline;
+} /* Name.Class */
+.highlight .no {
+  color: #40ffff;
+} /* Name.Constant */
+.highlight .nd {
+  color: #ffa500;
+} /* Name.Decorator */
+.highlight .ni {
+  color: #d0d0d0;
+} /* Name.Entity */
+.highlight .ne {
+  color: #bbbbbb;
+} /* Name.Exception */
+.highlight .nf {
+  color: #447fcf;
+} /* Name.Function */
+.highlight .nl {
+  color: #d0d0d0;
+} /* Name.Label */
+.highlight .nn {
+  color: #447fcf;
+  text-decoration: underline;
+} /* Name.Namespace */
+.highlight .nx {
+  color: #d0d0d0;
+} /* Name.Other */
+.highlight .py {
+  color: #d0d0d0;
+} /* Name.Property */
+.highlight .nt {
+  color: #6ab825;
+  font-weight: bold;
+} /* Name.Tag */
+.highlight .nv {
+  color: #40ffff;
+} /* Name.Variable */
+.highlight .ow {
+  color: #6ab825;
+  font-weight: bold;
+} /* Operator.Word */
+.highlight .w {
+  color: #666666;
+} /* Text.Whitespace */
+.highlight .mf {
+  color: #3677a9;
+} /* Literal.Number.Float */
+.highlight .mh {
+  color: #3677a9;
+} /* Literal.Number.Hex */
+.highlight .mi {
+  color: #3677a9;
+} /* Literal.Number.Integer */
+.highlight .mo {
+  color: #3677a9;
+} /* Literal.Number.Oct */
+.highlight .sb {
+  color: #ed9d13;
+} /* Literal.String.Backtick */
+.highlight .sc {
+  color: #ed9d13;
+} /* Literal.String.Char */
+.highlight .sd {
+  color: #ed9d13;
+} /* Literal.String.Doc */
+.highlight .s2 {
+  color: #ed9d13;
+} /* Literal.String.Double */
+.highlight .se {
+  color: #ed9d13;
+} /* Literal.String.Escape */
+.highlight .sh {
+  color: #ed9d13;
+} /* Literal.String.Heredoc */
+.highlight .si {
+  color: #ed9d13;
+} /* Literal.String.Interpol */
+.highlight .sx {
+  color: #ffa500;
+} /* Literal.String.Other */
+.highlight .sr {
+  color: #ed9d13;
+} /* Literal.String.Regex */
+.highlight .s1 {
+  color: #ed9d13;
+} /* Literal.String.Single */
+.highlight .ss {
+  color: #ed9d13;
+} /* Literal.String.Symbol */
+.highlight .bp {
+  color: #24909d;
+} /* Name.Builtin.Pseudo */
 .highlight .vc {
-  color: teal;
-}
-
+  color: #40ffff;
+} /* Name.Variable.Class */
 .highlight .vg {
-  color: teal;
-}
-
+  color: #40ffff;
+} /* Name.Variable.Global */
 .highlight .vi {
-  color: teal;
-}
-
+  color: #40ffff;
+} /* Name.Variable.Instance */
 .highlight .il {
-  color: #009999;
-}
-
-.highlight .gc {
-  color: #999;
-  background-color: #eaf2f5;
-}
+  color: #3677a9;
+} /* Literal.Number.Integer.Long */
