--- a/_includes/head.html
+++ b/_includes/head.html
@@ -125,7 +125,7 @@
     );
   </script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43746905-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPYG2J7ECC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
@@ -133,7 +133,7 @@
     }
     gtag("js", new Date());
 
-    gtag("config", "UA-43746905-1");
+    gtag("config", "G-ZPYG2J7ECC");
   </script>
   {% endif %}
 </head>
