--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,6 +64,10 @@
   <meta content="{{ tag }}" property="article:tag" />
   {% endfor %} {% endif %}
 
+  <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+  <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+  <link rel="dns-prefetch" href="//stackpath.bootstrapcdn.com" />
+  <link rel="dns-prefetch" href="//code.jquery.com" />
   <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html',''}}" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.production_url }}/feed.xml" />
   <link type="text/plain" rel="author" href="{{ site.base_url }}/humans.txt" />
